gust update
